first build is succes, probably doesnt work thou

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "calibrationprocedure",
   "version": "1.0.0",
   "description": "",
-  "main": "eyetracker.js",
+  "main": "./src/eyetracker.js",
   "scripts": {
-    "build": "webpack --mode production"
+    "build": "webpack --config webpack.config.js --progress"
   },
   "repository": {
     "type": "git",
