--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/lstuurmanVU/deepeyetracker-js#readme",
   "devDependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   },
@@ -26,10 +28,7 @@
     "@jspsych/plugin-fullscreen": "^1.1.2",
     "@jspsych/plugin-html-keyboard-response": "^1.1.2",
     "@jspsych/plugin-image-keyboard-response": "^1.1.2",
-    "crypto-browserify": "^3.12.0",
     "face-api.js": "^0.22.2",
-    "fs": "^0.0.1-security",
-    "http": "^0.0.1-security",
     "http-stream": "^0.1.1",
     "jspsych": "^7.3.2",
     "os": "^0.1.2",
@@ -37,7 +36,6 @@
     "path-browserify": "^1.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "url": "^0.11.0",
-    "util": "^0.12.5"
+    "url": "^0.11.0"
   }
 }
