--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Javascript library for recording eye movement via webcam using Deepeye API",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js --progress --mode=development"
   },
   "repository": {
     "type": "git",
