--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
+    "bootstrap-icons": "^1.5.0",
     "css-loader": "^6.8.1",
     "style-loader": "^3.3.3"
   }
