--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/lstuurmanVU/deepeyetracker-js#readme",
   "devDependencies": {
     "file-loader": "^6.2.0",
+    "json-loader": "^0.5.7",
     "raw-loader": "^4.0.2",
     "url-loader": "^4.1.1",
     "webpack": "^5.88.2",
