--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/lstuurmanVU/deepeyetracker-js#readme",
   "devDependencies": {
+    "binary-loader": "^0.0.1",
     "file-loader": "^6.2.0",
     "json-loader": "^0.5.7",
     "raw-loader": "^4.0.2",
