--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.11.0",
     "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.5.0",
     "css-loader": "^6.8.1",
+    "face-api.js": "^0.22.2",
     "n": "^9.1.0",
     "style-loader": "^3.3.3"
   }
