--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   },
   "homepage": "https://github.com/lstuurmanVU/deepeyetracker-js#readme",
   "devDependencies": {
+    "@tensorflow/tfjs-node": "^4.11.0",
     "binary-loader": "^0.0.1",
+    "canvas": "^2.11.2",
+    "face-api.js": "^0.22.2",
     "file-loader": "^6.2.0",
     "json-loader": "^0.5.7",
     "raw-loader": "^4.0.2",
@@ -35,6 +38,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.11.0",
     "bootstrap": "^4.5.2",
     "bootstrap-icons": "^1.5.0",
     "css-loader": "^6.8.1",
